# quic-test

./: .gitignore  .golangci.yml  .goreleaser.yml  .mailmap  CLOUDBRIDGE_INTEGRATION.md  Dockerfile  Dockerfile.client  Dockerfile.dashboard  Dockerfile.server  Dockerfile.tui  EXPERIMENTAL.md  MONITORING.md  Makefile  Makefile.cloudbridge  Makefile.error-test  Makefile.experimental  PORT_CONFIGURATION.md  README.md  README_ENHANCED.md  README_REFACTORED.md  REAL_INTEGRATION_REPORT.md  REFACTORING_SUMMARY.md  RELEASES.md  coverage.html  coverage.out  debug-report.json  docker-compose.monitoring.yml  docker-compose.yml  go.mod  go.sum  lab.md  main.go  readme.md  readme_en.md  readme_ru.md  report.md  run_with_quic_bottom.sh  start_real_quic_bottom.sh  test_experimental.sh  tui
.github/: dependabot.yml
client/: client.go  client_test.go  prometheus_exporter.go  prometheus_exporter_test.go
docs/: ARCHITECTURE.md  METRICS_SCHEMA.md  README.md  REPOSITORY_ORGANIZATION.md  TUI_USER_GUIDE.md  ai-routing-integration.md  api.md  architecture.md  case-studies.md  cli.md  client-devops-guide.md  client-quick-start.md  deployment.md  devops-implementation.md  devops-optimization-guide.md  docker.md  education.md  improvements-summary.md  masque-analysis.md  masque-testing-guide.md  readme-original-en.md  roadmap.md  server-connection-info.md  tui-architecture.md  usage.md  versioning.md  video.html
internal/: bottom_bridge.go  cloud_integration.go  config.go  config_test.go  (+28 more)
quic-bottom/: Cargo.toml  README.md  config.toml
quic-bottom/src/: anomaly_detection.rs  app.rs  bridge.rs  config.rs  correlation_widget.rs  demo_data.rs  heatmap_widget.rs  improved_layout.rs  lib.rs  metrics.rs  professional_graphs.rs  simple_professional.rs
quic-bottom/src/widgets/: mod.rs
(+167 files in other folders)
